--- a/PruebaProgreso1_Navarrete/Views/Cliente/Create.cshtml
+++ b/PruebaProgreso1_Navarrete/Views/Cliente/Create.cshtml
@@ -18,8 +18,23 @@
                 <span asp-validation-for="Nombre" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="planRecompensa" class="control-label"></label>
-                <select asp-for="planRecompensa" class="form-control" asp-items="ViewBag.PlanRecomensa"></select>
+                <label asp-for="Apellido" class="control-label"></label>
+                <input asp-for="Apellido" class="form-control" />
+                <span asp-validation-for="Apellido" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="FechaNacimiento" class="control-label"></label>
+                <input asp-for="FechaNacimiento" class="form-control" type="date" />
+                <span asp-validation-for="FechaNacimiento" class="text-danger"></span>
+            </div>
+            <div class="form-group form-check">
+                <label class="form-check-label">
+                    <input class="form-check-input" asp-for="EsVIP" /> @Html.DisplayNameFor(model => model.PlanRecompensa)
+                </label>
+            </div>
+            <div class="form-group">
+                <label asp-for="Saldo" class="control-label"></label>
+                <select asp-for="Saldo" class="form-control" asp-items="ViewBag.Saldo"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
@@ -37,4 +52,3 @@
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
 }
-
